--- a/basics/TODO
+++ b/basics/TODO
@@ -1,8 +1,7 @@
-- see if necessary to add binary crates
-- test collinearity 
-- add fastcollinearity
+- test collinearity (using Brute and Fast)
+- add fastcollinearity and drop duplicates in results (use HashSet in std collections ?)
 - add improvements of quicksort (3 way)
 - priority queues: event-driven simulation and puzzle
 - test heapsort thouroughly (use PriorityQueue in implementation of HeapSort?)
 - finish Queue implementation
-- improve bin collinearity to take file input of points (clap)
+- threesum with Reader
