--- a/advanced/TODO
+++ b/advanced/TODO
@@ -1,4 +1,5 @@
 - add tests graph, dfs, bfs
 - add application to smart contracts ?
 - SAP wordnet ancestor add threading ?
-- impl string connected components for digraphs and test
+- Add Option to path_to method output signature for BFS, DFS and shortest paths search algorithms
+- Test EdgeWeightedDigraph
