--- a/advanced/TODO
+++ b/advanced/TODO
@@ -1,2 +1,4 @@
-- add application to smart contracts ?
+- add application to arbitrage crypto ?
 - SAP wordnet ancestor add threading ?
+- Test Ford Fulkerson
+- Test Compress/ expand
